--- a/Controller/templates/videoRequest.html
+++ b/Controller/templates/videoRequest.html
@@ -40,6 +40,7 @@
     <script src="{{ url_for('static', filename='js/Location.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/law.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/request.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
 
     <style>
 
@@ -97,7 +98,6 @@
                 </div>
             </div>
         </div>
-
 
             <!-- 컨텐츠 표시 -->
             <div id="myform" class="text-center bg-light text-dark bg-opacity-100 d-inline-block" >
