--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -108,7 +108,7 @@
                                         정말로 삭제하시겠습니까?
                                       </div>
                                       <div class="modal-footer">
-                                          <button type="button" id="confirmDeleteButton" class="btn btn-primary">확인</button>
+                                          <button type="button" id="confirmDeleteButton" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
                                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
                                       </div>
                                     </div>
