--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -68,85 +68,96 @@
             <hr>
 
             <!-- Video List -->
-            <div class="mainclass justify-content-center">
-                <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3 row-cols-xl-3 justify-content-start">
-                    {% for item in list %}
-                        <div class="col mb-4">
-                            <div class="video-card" id="{{ loop.index }}">
-                                {% if item[8] == "complete" %}
-                                    <div class="video-container">
-                                        <video id="players{{ loop.index }}" style="position: static;" controls width="500">
-                                            <source src="{{url_for('static', filename=item[0])}}" type="video/mp4">
-                                            <a href="{{url_for('static', filename=item[0])}}">MP4</a>
-                                        </video>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="card">
-                                           <div class="card-header">
-                                               <h5 class="card-title">영상정보</h5>
-                                           </div>
-                                           <ul class="list-group list-group-flush">
-                                               <li class="list-group-item">
-                                                    <p><strong>신청자:</strong> {{ item[1] }}</p>
-                                                    <p><strong>카메라ID:</strong> {{ item[2] }}
-                                                    </p><p><strong>신청 날짜:</strong> {{ item[3] }}</p>
-                                                </li>
-                                           </ul>
-                                        </div>
-                                        <div class="bt-group">
-                                            <button class="btn btn-primary2 btn-block delete-action" data-card-id="{{ loop.index }}" id="deleteBtn{{ loop.index }}" data-video-name="{{ item[0] }}" data-bs-toggle="modal" data-bs-target="#confirmModal">영상삭제</button>
-                                        </div>
+            <div class="mainclass" id="mainclass">
+                {% for item in list %}
+                    <div class="video-card" id="{{ loop.index }}">
+                        {% if item[8] == "complete" %}
+                            <div class="video-container">
+                                <video id="players{{ loop.index }}" style="position: static;" controls width="500">
+                                    <source src="{{url_for('static', filename=item[0])}}" type="video/mp4">
+                                    <a href="{{url_for('static', filename=item[0])}}">MP4</a>
+                                </video>
+                            </div>
+                            <div class="card-body">
+                                <div class="card">
+                                   <div class="card-header">
+                                       <h5 class="card-title">영상정보</h5>
+                                   </div>
+                                   <ul class="list-group list-group-flush">
+                                       <li class="list-group-item">
+                                            <p><strong>신청자:</strong> {{ item[1] }}</p>
+                                            <p><strong>카메라ID:</strong> {{ item[2] }}
+                                            </p><p><strong>신청 날짜:</strong> {{ item[3] }}</p>
+                                        </li>
+                                   </ul>
+                                </div>
+                                <div class="bt-group">
+                                    <button class="btn btn-primary">파일삭제Test</button>
+                                    <button class="btn btn-primary2 btn-block delete-action" data-card-id="{{ loop.index }}" id="deleteBtn{{ loop.index }}" data-video-name="{{ item[0] }}" data-bs-toggle="modal" data-bs-target="#confirmModal">영상삭제</button>
+                                </div>
 
-                                        <!-- 삭제 안내 -->
-                                        <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
-                                          <div class="modal-dialog">
-                                            <div class="modal-content">
-                                              <div class="modal-header">
-                                                <h1 class="modal-title fs-5" id="confirmModalLabel">주의!</h1>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                              </div>
-                                              <div class="modal-body">
-                                                정말로 삭제하시겠습니까?
-                                              </div>
-                                              <div class="modal-footer">
-                                                  <button type="button" id="confirmDeleteButton" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
-                                                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-                                              </div>
-                                            </div>
-                                          </div>
-                                        </div>
+                                <!-- 삭제 안내 - DB -->
+                                <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+                                  <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="confirmModalLabel">주의!</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                        정말로 삭제하시겠습니까?
+                                      </div>
+                                      <div class="modal-footer">
+                                          <button type="button" id="confirmDeleteButton" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
+                                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+                                      </div>
                                     </div>
-                                {% else %}
-                                    <div style="text-align: center; position: static;">
-                                        <span class="back" style="overflow: hidden">
-                                            <span>영</span>
-                                            <span>상</span>
-                                            <span>준</span>
-                                            <span>비</span>
-                                            <span>중</span>
-                                        </span>
+                                  </div>
+                                </div>
+                                <!-- 삭제 안내 - 파일 -->
+                                <div class="modal fade" id="dconfirmModal" tabindex="-1" aria-labelledby="dconfirmModalLabel" aria-hidden="true">
+                                  <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="dconfirmModalLabel">주의!</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                        정말로 삭제하시겠습니까?
+                                      </div>
+                                      <div class="modal-footer">
+                                          <button type="button" id="dconfirmDeleteButton" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
+                                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+                                      </div>
                                     </div>
-                                {% endif %}
-                            </div><br>
-                        </div>
-                    {% endfor %}
-                </div>
+                                  </div>
+                                </div>
+                            </div>
+                        {% else %}
+                            <div style="text-align: center; position: static;">
+                                <span class="back" style="overflow: hidden">
+                                    <span>영</span>
+                                    <span>상</span>
+                                    <span>준</span>
+                                    <span>비</span>
+                                    <span>중</span>
+                                </span>
+                            </div>
+                        {% endif %}
+                    </div><br>
+                {% endfor %}
             </div>
         </div>
     </div>
 
 </main>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        // 확인 버튼을 선택합니다.
-        var confirmButton = document.getElementById("confirmDeleteButton");
-
-        // 확인 버튼에 클릭 이벤트를 추가합니다.
-        confirmButton.addEventListener("click", function () {
-            // 페이지를 리프레시합니다.
-            location.reload();
-        });
-    });
-</script>
 </body>
+<style>
+    @media (max-width: 1425px) {
+        .mainclass {
+            justify-content: center;
+        }
+    }
+</style>
+
 </html>
