--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -68,7 +68,7 @@
             <hr>
 
             <!-- Video List -->
-            <div class="mainclass">
+            <div id="mainclass" class="mainclass">
                 {% for item in list %}
                     <div class="video-card" id="{{ loop.index }}">
                         {% if item[8] == "complete" %}
