--- a/Controller/static/css/video.css
+++ b/Controller/static/css/video.css
@@ -135,7 +135,11 @@ body{
   margin: 10px 0;
 }
 
-
+@media (max-width: 1425px) {
+        .mainclass {
+            justify-content: center;
+        }
+    }
 
 
 
