--- a/Controller/templates/videoRequest.html
+++ b/Controller/templates/videoRequest.html
@@ -139,7 +139,7 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <div class="d-flex justify-content-center align-items-center">
-                                    <label for="terms" class="form-check-label form-check-inline m-0"><strong>열람 사유 &nbsp; &nbsp;</strong></label>
+                                    <label for="part" class="form-check-label form-check-inline m-0"><strong>열람 사유 &nbsp; &nbsp;</strong></label>
                                     <select class="form-select form-select-sm" size="1" id="part" name = "part" required>
                                         <option selected disabled value="">목적</option>
                                         <option value="Personal">개인</option>
