--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -78,7 +78,7 @@
                                     <a href="{{url_for('static', filename=item[0])}}">MP4</a>
                                 </video>
                             </div>
-                            <div class="card-body">9
+                            <div class="card-body">
                                 <div class="card">
                                    <div class="card-header">
                                        <h5 class="card-title">영상정보</h5>
