--- a/Controller/templates/videoRequest.html
+++ b/Controller/templates/videoRequest.html
@@ -98,7 +98,7 @@
                         <p>- 다만, <strong style="color:Tomato;">범죄의 수사와 공소의 제기 및 유지를 위하여 필요한 경우</strong> 또는 <strong style="color:Tomato;">법원의 재판업무 수행을 위하여 필요한 경우</strong>에는 이를 열람, 제공할 수 있습니다.<br><br>
                         <h5>2. 약관</h5><br>
                         <p>- 본 사용자는 해당 법적 고지를 이해하고 위반하지 않겠음을 동의해야 합니다. <br><br>
-                        <h5>3. 테스트</h5>
+{#                        <h5>3. 테스트</h5>#}
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="document.getElementById('terms').checked = true">확인</button>
@@ -117,8 +117,9 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="cameraName"><strong>카메라ID 및 위치</strong></label>
-                                <input id="cameraName" name="cameraName" type="text" class="form-control is-valid" value="{{ cameraName }}" readonly required>
+{#                                <input id="cameraName" name="cameraName" type="text" class="form-control is-valid" value="{{ cameraName }}" readonly required>#}
                                 &nbsp;
+                                <input id="cameraName" name="cameraName" type="text" class="form-control is-valid" value="esqure_01" readonly required> <!-- 로컬용  -->
                                 <button class="btn btn-primary btn-lg btn-block" name = "getLocationBtn" id="getLocationBtn" type="button" onclick="getLocation()">위치정보수집동의</button>
                                 <input type="hidden" id="location" name="location" placeholder="Location will appear here" readonly>
 
