--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -23,8 +23,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
 
     <!-- VIDEO CDN-->
-{#    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />#}
-{#    <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>#}
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+    <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel ="stylesheet" href ="{{ url_for('static', filename='css/styles.css') }}"/>
@@ -37,11 +37,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/video.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/videosort.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}">
-{#    <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">#}
 
     <!-- 사용자 JS -->
     <script src="{{ url_for('static', filename='js/nav.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/signup.js') }}"></script>
+{#    <script src="{{ url_for('static', filename='js/signup.js') }}"></script>#}
     <script src="{{ url_for('static', filename='js/List.js') }}"></script>
 
 
