--- a/Controller/templates/cameraMap.html
+++ b/Controller/templates/cameraMap.html
@@ -56,19 +56,59 @@
             <h4 class="mb-3">Camera Map</h4>
             <hr>
 
-            <!-- Video List -->
-            <div id="mainclass" class="mainclass">
-            </div>
+            <!-- Camera Map-->
+            <div id="map" style="width:100%;height:350px;"></div>
+            <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fc08fff74aefb480cd5e4825d06fe58b"></script>
+
+            <script>
+                {#var latitude = {{ latitude }};#}
+                {#var longitude = {{ longitude }};#}
+
+                var mapContainer = document.getElementById('map');// 지도를 표시할 div
+                mapOption = {
+                    center: new kakao.maps.LatLng({{ latitude }}, {{ longitude }}), // 지도의 중심좌표
+                    level: 4, // 지도의 확대 레벨
+                    mapTypeId : kakao.maps.MapTypeId.ROADMAP // 지도종류
+                };
+
+                // 지도를 생성한다
+                var map = new kakao.maps.Map(mapContainer, mapOption);
+
+                // 실시간교통 타일 이미지 추가
+                map.addOverlayMapTypeId(kakao.maps.MapTypeId.TRAFFIC);
+
+                // 지도에 확대 축소 컨트롤을 생성한다
+                var zoomControl = new kakao.maps.ZoomControl();
+
+                // 지도의 우측에 확대 축소 컨트롤을 추가한다
+                map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+
+                // 카메라 위치 데이터를 가져오고 지도에 마커 표시
+                fetch('/GetLocation')
+                    .then(response => response.json())
+                    .then(data => {
+                        data.GetLocation.forEach(camera => {
+                            var markerPosition = new kakao.maps.LatLng(camera.latitude, camera.longitude);
+                            var marker = new kakao.maps.Marker({
+                                position: markerPosition,
+                                map: map
+                            });
+
+                            // 마커 클릭 시 정보 창 표시 (예: 카메라 이름)
+                            var infowindow = new kakao.maps.InfoWindow({
+                                content: camera.name
+                            });
+
+                            kakao.maps.event.addListener(marker, 'click', function() {
+                                infowindow.open(map, marker);
+                            });
+                        });
+                    });
+
+                </script>
         </div>
     </div>
 
 </main>
-<style>
-    @media (max-width: 1425px) {
-        .mainclass {
-            justify-content: center;
-        }
-    }
-</style>
 </body>
 </html>
