--- a/Controller/templates/videoRequest.html
+++ b/Controller/templates/videoRequest.html
@@ -117,7 +117,7 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="cameraName"><strong>카메라ID 및 위치</strong></label>
-                                <a href="cameraMap.html" class="btn btn-primary">맵 보기</a>
+                                <a onclick="window.location.href='/cameraMap'" id="cameraMap" class="btn btn-primary">&#128269;</a>
 {#                                <input id="cameraName" name="cameraName" type="text" class="form-control is-valid" value="{{ cameraName }}" readonly required>#}
                                 &nbsp;
                                 <input id="cameraName" name="cameraName" type="text" class="form-control is-valid" value="esqure_01" readonly required> <!-- 로컬용  -->
