--- a/Controller/templates/videoRequest.html
+++ b/Controller/templates/videoRequest.html
@@ -169,7 +169,7 @@
                         <hr>
                         <div class="mb-4">
                         </div>
-                        <button class="btn btn-primary btn-lg btn-block" type="submit" name = "button">제출</button>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit" name = "button" onclick="getMapLocation()">제출</button>
                     </div>
                     </form>
                 </div>
