--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -41,7 +41,7 @@
 
     <!-- 사용자 JS -->
     <script src="{{ url_for('static', filename='js/nav.js') }}"></script>
-{#    <script src="{{ url_for('static', filename='js/signup.js') }}"></script>#}
+    <script src="{{ url_for('static', filename='js/Location.js') }}"></script>
     <script src="{{ url_for('static', filename='js/List.js') }}"></script>
 
 
@@ -70,7 +70,7 @@
             <!-- Video List -->
             <div id="mainclass" class="mainclass">
                 {% for item in list %}
-                    <div class="video-card" id="{{ loop.index }}">
+                    <div class="video-card" id="card {{ loop.index }}">
                         {% if item[8] == "complete" %}
                             <div class="video-container">
                                 <video id="players{{ loop.index }}" style="position: static;" controls width="500">
@@ -82,13 +82,13 @@
                                 <div class="card">
                                    <div class="card-header">
                                        <h5 class="card-title">영상정보</h5>
-                                       <a href='/cameraMap' id="cameraMap" class="btn btn-primary">&#128269;</a>
+                                       <a href='/cameraMap' id="cameraMap" class="btn btn-primary" onclick="getMapLocation()">&#128269;</a>
                                    </div>
                                    <ul class="list-group list-group-flush">
                                        <li class="list-group-item">
                                             <p><strong>신청자:</strong> {{ item[1] }}</p>
-                                            <p><strong>카메라ID:</strong> {{ item[2] }}
-                                            </p><p><strong>신청 날짜:</strong> {{ item[3] }}</p>
+                                            <p><strong>카메라ID:</strong> {{ item[2] }}</p>
+                                            <p><strong>신청 날짜:</strong> {{ item[3] }}</p>
                                         </li>
                                    </ul>
                                 </div>
