--- a/Controller/templates/cameraMap.html
+++ b/Controller/templates/cameraMap.html
@@ -69,17 +69,15 @@
                 // 지도를 생성한다
                 var map = new kakao.maps.Map(mapContainer, mapOption);
 
-                // HTML5의 geolocation으로 사용할 수 있는지 확인합니다
+                // GeoLocation을 이용해서 접속 위치를 얻어옴
                 if (navigator.geolocation) {
-
-                    // GeoLocation을 이용해서 접속 위치를 얻어옵니다
                     navigator.geolocation.getCurrentPosition(function(position) {
 
                         var lat = position.coords.latitude, // 위도
                             lon = position.coords.longitude; // 경도
                         console.log(lat, lon);
 
-                        var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+                        var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치
                             message = '<div style="padding:5px;">여기에 계신가요?!</div>'; // 인포윈도우에 표시될 내용입니다
 
                         // 마커와 오버레이를 표시합니다
@@ -87,7 +85,7 @@
 
                       });
 
-                } else { // HTML5의 GeoLocation을 사용할 수 없을때 마커 표시 위치와 인포윈도우 내용을 설정합니다
+                } else { // HTML5의 GeoLocation을 사용할 수 없을때
 
                     var locPosition = new kakao.maps.LatLng(37.4812845080678, 126.952713197762),
                         message = 'geolocation을 사용할수 없어요..'
@@ -95,10 +93,28 @@
                     displayOverlay(locPosition, message);
                 }
 
-                // 지도에 마커와 오버레이를 표시하는 함수입니다
+                // 마커, 오버레이, 원 표시하는 함수
                 function displayOverlay(locPosition, message) {
-                    // 지도 중심좌표를 접속위치로 변경합니다
+                    // 지도 중심좌표를 접속위치로 변경
                     map.setCenter(locPosition);
+
+                    // 원 모양의 지역 설정
+                    var circle = new kakao.maps.Circle({
+                        center: locPosition, // 중심 좌표 설정
+                        radius: 100, // 반경 설정 (미터 단위)
+                        strokeWeight: 1, // 원 테두리 두께
+                        strokeColor: '#FF0000', // 원 테두리 색상
+                        strokeOpacity: 0.8, // 원 테두리 투명도
+                        strokeStyle: 'solid', // 원 테두리 스타일
+                        fillColor: '#FF0000', // 원 내부 색상
+                        fillOpacity: 0.2, // 원 내부 투명도
+                    });
+
+                    // 지도에 원 추가
+                    circle.setMap(map);
+
+                    // 실시간교통 타일 이미지 추가
+                    map.addOverlayMapTypeId(kakao.maps.MapTypeId.TRAFFIC);
 
                     var marker = new kakao.maps.Marker({
                         position: locPosition,
@@ -143,17 +159,19 @@
                     function closeOverlay() {
                         overlay.setMap(null);
                     }
-                }
 
-                // 실시간교통 타일 이미지 추가
-                map.addOverlayMapTypeId(kakao.maps.MapTypeId.TRAFFIC);
+                    var closeBtn = document.querySelector('.close'); // .close 클래스를 가진 요소 선택
+                    closeBtn.addEventListener('click', function() {
+                        closeOverlay();
+                    });
+
+                }
 
                 // 지도에 확대 축소 컨트롤을 생성한다
                 var zoomControl = new kakao.maps.ZoomControl();
 
                 // 지도의 우측에 확대 축소 컨트롤을 추가한다
                 map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
-
             </script>
         </div>
     </div>
