지도 구현중

--- a/Controller/templates/videoList.html
+++ b/Controller/templates/videoList.html
@@ -82,7 +82,7 @@
                                 <div class="card">
                                    <div class="card-header">
                                        <h5 class="card-title">영상정보</h5>
-                                       <a href='/cameraMap' id="cameraMap" class="btn btn-primary" onclick="getMapLocation()">&#128269;</a>
+                                       <a href='/cameraMapL' id="cameraMap" class="btn btn-primary" onclick="getMapLocation()">&#128269;</a>
                                    </div>
                                    <ul class="list-group list-group-flush">
                                        <li class="list-group-item">
