--- a/Controller/templates/cameraMapL.html
+++ b/Controller/templates/cameraMapL.html
@@ -83,7 +83,7 @@
                         console.log(lat, lon);
 
                         var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치
-                            message = '<div style="padding:5px;">여기에 계신가요?!</div>'; // 인포윈도우에 표시될 내용입니다
+                            message = '<div style="padding:5px;">현위치</div>'; // 인포윈도우에 표시될 내용입니다
 
                         // 마커와 오버레이를 표시합니다
                         displayOverlay(locPosition, message);
